feat: ig username made clickable link

--- a/algebraic-notation.tex
+++ b/algebraic-notation.tex
@@ -441,7 +441,7 @@ backboard,]}
 
 \begin{tabularx}{5.377cm}
 \large
-\normalsize{}{\faInstagram} \Large{moscowchessclub}\\
+\normalsize{}{\faInstagram} \Large{\href{https://instagram.com/moscowchessclub}{moscowchessclub}}\\
 московский шахматный клуб
 \end{tabularx}
 % That's all folks
